Cycles-X: Viewport display is distorted upon render finish with adaptive sampling and a non-one pixel size. #91427

Closed
opened 2021-09-15 09:12:30 +02:00 by Alaska · 5 comments
Member

System Information
Operating system: Linux-5.10.0-8-amd64-x86_64-with-glibc2.31 64 Bits
Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.63.01

Blender Version
Broken: version: 3.0.0 Alpha, branch: cycles-x, commit date: 2021-09-14 15:01, hash: 58ab616d4c
Worked: Prior to Cycles-X

Short description of error
The Cycles viewport is distorted with the viewport render finishes due to adaptive sampling and the pixel size is larger than 1x. Here's a video:
2021-09-15 18-41-24.mp4

Exact steps for others to reproduce the error

  1. Create a simple scene (I used the default scene with a blue sky)
  2. Set the Pixel Size value to something other than 1x in Performance panel of the render properties tab. (I used 2x)
  3. Ensure adaptive sampling is enabled and the sample count is high (use 0 just to be sure)
  4. Enter rendered viewport mode. When you reach the point where the render stops because the noise threshold for adaptive sampling is reached, the viewport will end up distorted like in the video above.
**System Information** Operating system: Linux-5.10.0-8-amd64-x86_64-with-glibc2.31 64 Bits Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.63.01 **Blender Version** Broken: version: 3.0.0 Alpha, branch: cycles-x, commit date: 2021-09-14 15:01, hash: `58ab616d4c` Worked: Prior to Cycles-X **Short description of error** The Cycles viewport is distorted with the viewport render finishes due to adaptive sampling and the pixel size is larger than 1x. Here's a video: [2021-09-15 18-41-24.mp4](https://archive.blender.org/developer/F10418737/2021-09-15_18-41-24.mp4) **Exact steps for others to reproduce the error** 1. Create a simple scene (I used the default scene with a blue sky) 2. Set the `Pixel Size` value to something other than 1x in `Performance` panel of the render properties tab. (I used 2x) 3. Ensure adaptive sampling is enabled and the sample count is high (use 0 just to be sure) 4. Enter rendered viewport mode. When you reach the point where the render stops because the noise threshold for adaptive sampling is reached, the viewport will end up distorted like in the video above.
Author
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Author
Member

Changed status from 'Needs Triage' to: 'Archived'

Changed status from 'Needs Triage' to: 'Archived'
Author
Member

Bug report for Cycles-X. Reported here for ease of access but archived because we do not accept bug reports for Cycles-X yet.

Bug report for Cycles-X. Reported here for ease of access but archived because we do not accept bug reports for Cycles-X yet.
Alaska changed title from Cycles-X: Viewport display is distorted upon render finish with adaptive sampling and a non-zero pixel size. to Cycles-X: Viewport display is distorted upon render finish with adaptive sampling and a non-one pixel size. 2021-09-15 09:45:32 +02:00

This issue was referenced by 3b38531b4528f3c4e0cde7f82f0aebfaaedc5479

This issue was referenced by 3b38531b4528f3c4e0cde7f82f0aebfaaedc5479

Changed status from 'Archived' to: 'Resolved'

Changed status from 'Archived' to: 'Resolved'
Sign in to join this conversation.
3 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#91427
No description provided.